src/objects/CustomObject17__c.object
<CustomObject>
    <fields>
        <fullName>chanp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>产品明细</relationshipLabel>
        <relationshipName>chanps2Qs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chbm__c</fullName>
        <label>存货编码</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpmc__c</fullName>
        <label>产品名称</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiage__c</fullName>
        <label>价格</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>miaos__c</fullName>
        <label>描述</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pjsm__c</fullName>
        <label>配件说明</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>必选配件</fullName>
                </value>
                <value>
                    <fullName>可选配件</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>shul__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xuhao__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </fields>
    <label>产品明细</label>
    <nameField>
        <label>产品明细名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>产品明细</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>